fix overflow issue

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -342,7 +342,7 @@
         }
       }
       &__content {
-        height: calc(#{$select-asset-item-height} * 7);
+        min-height: calc(#{$select-asset-item-height} * 7);
       }
     }
   }
